fixed some z-indexing issues

--- a/addons/user-tags.css
+++ b/addons/user-tags.css
@@ -25,7 +25,6 @@
   font-family: BMTicons;
   pointer-events: none;
   display: inline-block !important;
-  z-index: 1;
 }
 
 .wrapper-3t9DeA[user_by_bdfdb]:hover::after {
